--- a/trunk/source/org.eclipse.ve/features/org.eclipse.ve.examples-feature/sourceTemplatePlugin/build.properties
+++ b/trunk/source/org.eclipse.ve/features/org.eclipse.ve.examples-feature/sourceTemplatePlugin/build.properties
@@ -1,5 +1,6 @@
 bin.includes = plugin.xml,\
                plugin.properties,\
                about.html,\
-               src/
+               src/,\
+               META-INF/
 sourcePlugin = true
