--- a/trunk/source/org.eclipse.ve.swt/plugin.properties
+++ b/trunk/source/org.eclipse.ve.swt/plugin.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve.swt/plugin.properties,v $
-# $Revision: 1.15 $  $Date: 2005-05-20 21:53:20 $
+# $Revision: 1.16 $  $Date: 2005-06-03 21:33:03 $
 #
 
 
@@ -36,3 +36,4 @@ Example.SimpleSWTTextEditor.Desc        = Create a Java visual class that is a b
 
 NewStyleComponent.RCP					= RCP
 NewStyleComponent.View					= View
+NewStyleComponent.Editor					= Editor
